--- a/BankomatV2/BankomatV2.csproj
+++ b/BankomatV2/BankomatV2.csproj
@@ -47,6 +47,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseInterface.cs" />
+    <Compile Include="EnterPin.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="EnterPin.Designer.cs">
+      <DependentUpon>EnterPin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ErrPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ErrPanel.Designer.cs">
+      <DependentUpon>ErrPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +79,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EnterPin.resx">
+      <DependentUpon>EnterPin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ErrPanel.resx">
+      <DependentUpon>ErrPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
